--- a/index.html
+++ b/index.html
@@ -127,21 +127,49 @@
           <div class="form-group">
             <label for="textArea">Describe your mechanism.</label>
             <textarea class="form-control" id="textArea" rows="15">
-IL-2 binds IL2R.
-IL2R binds IL2R.
-IL2R binds SHC1, FYN, SYK, STAT5B, STAT1, STAT5A, and JAK3.
-JAK3 phosphorylates JAK3, JAK1, STAT5A, and STAT5B.
-JAK1 phosphorylates IL2R, SHC1, LCK.
-JAK1 binds PIK3R1.
-SOCS3 inhibits JAK1.
-SHC1 binds GRB2 and CBL.
-GRB2 binds GAB2, CBL, SOS1, CRKL, and PTPN11.
-CBL binds PIK3R1.
-SOS1 bound to GRB2 binds HRAS.
-HRAS binds RAF1.
-RAF1 increases the transcription of MAP2K1 and MAP2K2.
-MAP2K1 and MAP2K2 bind MAPK and MAPK3.
-MAPK and MAPK3 increase the amount of c-Jun and FOS.
+Growth-factor proteins activate EGFR, ERBB2 and FGFR.
+Growth-factor proteins activate PDGFR.
+Growth-factor proteins activate MET, ROS1 and ALK.
+EGFR, ERBB2, PDGFR, MET, ROS1, ALK and FGFR activate GRB2 and SHC.
+GRB2 and SHC activate RASGRF and SOS.
+GRB2 binds SHC.
+SOS and RASGRF activate HRAS, NRAS and KRAS.
+RASGRP activates HRAS, KRAS and NRAS.
+SPRY deactivates HRAS, KRAS and NRAS.
+RASA/ARHGAP35 deactivates HRAS, NRAS and KRAS.
+RASAL deactivates HRAS, NRAS and KRAS.
+NF1/SPRED deactivates HRAS, NRAS and KRAS.
+RASA/ARHGAP35 deactivates RHOA, RHOB and RHOC.
+RASAL deactivates RHOA, RHOB and RHOC.
+NF1/SPRED deactivates RHOA, RHOB and RHOC.
+HRAS, NRAS and KRAS activate RALGDS.
+RALGDS activates RALA and RALB.
+HRAS, NRAS and KRAS activate ARAF, BRAF and RAF1.
+ARAF, BRAF and RAF1 activate MAP2K1 and MAP2K2.
+MAP2K1 and MAP2K2 activate MAPK1 and MAPK3.
+MAPK1 and MAPK3 activate ETS, JUN and FOS.
+KSR binds ARAF, BRAF and RAF1.
+KSR binds MAP2K1 and MAP2K2.
+KSR binds MAPK1 and MAPK3.
+ETS, FOS and JUN activate MDM2, CCND1 and DUSP.
+MDM2 deactivates TP53.
+CCND1 activates CDK4 and CDK6, which deactivate RB1.
+DUSP deactivates MAPK1 and MAPK3.
+SOS and RASGRF activate RHOA, RHOB and RHOC.
+RHOA, RHOB and RHOC activate ROCK1 and ROCK2.
+HRAS, NRAS and KRAS activate PIK3C and PIK3R.
+PIK3C and PIK3R activate PIP3.
+PTEN deactivates PIP3.
+PIP3 activates PDPK1, AKT and TIAM.
+PDPK1 activates AKT.
+AKT deactivates TSC1/TSC2.
+TSC1/TSC2 deactivates RHEB.
+RHEB activates mTORC2.
+STK11 activates PRKAA, PRKAB and PRKAG.
+PRKAA, PRKAB and PRKAG deactivate mTORC2.
+mTORC2 deactivates EIF4EBP1.
+mTORC2 activates RPS6KB1 and RPS6KB2.
+TIAM activates RAC, which activates PAK.
             </textarea>
           </div>
 
@@ -150,18 +178,17 @@ MAPK and MAPK3 increase the amount of c-Jun and FOS.
           <div class= 'btn-div'>
               <div><b>NLP System</b></div>
               <button id='parseReach' type="submit" class="btn btn-default parserSelect active">REACH</button>
-              <button id='parseTrips' type="submit" class="btn btn-default parserSelect disabled">TRIPS</button>
-
+              <button id='parseTrips' type="submit" class="btn btn-default parserSelect">TRIPS</button>
+              <br>
+              <div><b>Download Outputs</b></div>
+              <button id='downloadINDRA' type="submit" class="btn btn-default">Download INDRA statments</button>
+              <button id='downloadPySB' type="submit" class="btn btn-default">Download PySB</button>
+              <button id='downloadPNG' type="submit" class="btn btn-default">Download PNG</button>
           </div>
+
           <hr>
           <div class= 'btn-div'>
               <button id='loadButtonDynamic' type="submit" class="btn btn-primary">Load</button>
-
-          </div>
-          <div class='btn-div'>
-              <!-- <button id='downloadINDRA' type="submit" class="btn btn-default">Download INDRA statments</button>
-              <button id='downloadPySB' type="submit" class="btn btn-default">Download PySB</button> -->
-
           </div>
     </div>
 
@@ -234,7 +261,7 @@ MAPK and MAPK3 increase the amount of c-Jun and FOS.
                               <li>Enter a list of sentences describing biological mechanisms.</li>
                               <li>Click load and exit the menu.</li>
                               <li>Your model should be ready momentarily.</li>
-                              <li>The text example in BYOM is a description of this <a href="http://www.wikipathways.org/index.php/Pathway:WP49">WikiPathways</a> diagram showing how the RAS-MAPK cascade is triggered by IL2 signaling.</li>
+                              <li>The text example in BYOM is a description of Frank McCormick's Ras Pathway diagram.</li>
                           </ul>
                           <br>
                           <h4>Model context</h4>
