--- a/index.html
+++ b/index.html
@@ -183,6 +183,10 @@ TIAM activates RAC, which activates PAK.
               <div><b>Download Outputs</b></div>
               <button id='downloadINDRA' type="submit" class="btn btn-default">Download INDRA statments</button>
               <button id='downloadPySB' type="submit" class="btn btn-default">Download PySB</button>
+              <button id='downloadSBML' type="submit" class="btn btn-default">Download SBML</button>
+              <button id='downloadSBGN' type="submit" class="btn btn-default">Download SBGN</button>
+              <button id='downloadBNGL' type="submit" class="btn btn-default">Download BNGL</button>
+              <button id='downloadKappa' type="submit" class="btn btn-default">Download Kappa</button>
               <button id='downloadPNG' type="submit" class="btn btn-default">Download PNG</button>
           </div>
 
