Rename some buttons and tabs

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                   <div class="tabbable">
                   <ul class="nav nav-tabs">
                     <li class="active"><a data-toggle="tab" href="#ras227">Prebuilt models</a></li>
-                    <li ><a data-toggle="tab" href="#byom">BYOM</a></li>
+                    <li ><a data-toggle="tab" href="#byom">Build</a></li>
                     <li ><a data-toggle="tab" href="#context">Context</a></li>
                     <!-- <li ><a data-toggle="tab" href="#phospho">Phospho</a></li> -->
                     <li ><a data-toggle="tab" href="#about">About</a></li>
@@ -176,18 +176,18 @@ TIAM activates RAC, which activates PAK.
        </form>
 
           <div class= 'btn-div'>
-              <div><b>NLP System</b></div>
+              <div><b>NLP system to read with</b></div>
               <button id='parseReach' type="submit" class="btn btn-default parserSelect active">REACH</button>
               <button id='parseTrips' type="submit" class="btn btn-default parserSelect">TRIPS</button>
               <br>
-              <div><b>Download Outputs</b></div>
-              <button id='downloadINDRA' type="submit" class="btn btn-default">Download INDRA statments</button>
-              <button id='downloadPySB' type="submit" class="btn btn-default">Download PySB</button>
-              <button id='downloadSBML' type="submit" class="btn btn-default">Download SBML</button>
-              <button id='downloadSBGN' type="submit" class="btn btn-default">Download SBGN</button>
-              <button id='downloadBNGL' type="submit" class="btn btn-default">Download BNGL</button>
-              <button id='downloadKappa' type="submit" class="btn btn-default">Download Kappa</button>
-              <button id='downloadPNG' type="submit" class="btn btn-default">Download PNG</button>
+              <div><b>Download output formats</b></div>
+              <button id='downloadINDRA' type="submit" class="btn btn-default">INDRA statments</button>
+              <button id='downloadPySB' type="submit" class="btn btn-default">PySB</button>
+              <button id='downloadSBML' type="submit" class="btn btn-default">SBML</button>
+              <button id='downloadSBGN' type="submit" class="btn btn-default">SBGN</button>
+              <button id='downloadBNGL' type="submit" class="btn btn-default">BNGL</button>
+              <button id='downloadKappa' type="submit" class="btn btn-default">Kappa</button>
+              <button id='downloadPNG' type="submit" class="btn btn-default">PNG</button>
           </div>
 
           <hr>
@@ -261,11 +261,11 @@ TIAM activates RAC, which activates PAK.
                           <br>
                           <h4>Build your own model from text</h4>
                           <ul>
-                              <li>Open the BYOM (Build your own model) tab.</li>
+                              <li>Open the Build tab.</li>
                               <li>Enter a list of sentences describing biological mechanisms.</li>
                               <li>Click load and exit the menu.</li>
                               <li>Your model should be ready momentarily.</li>
-                              <li>The text example in BYOM is a description of Frank McCormick's Ras Pathway diagram.</li>
+                              <li>The text example in Build is a description of Frank McCormick's Ras Pathway diagram.</li>
                           </ul>
                           <br>
                           <h4>Model context</h4>
