Move download buttons to bottom of canvas

--- a/index.html
+++ b/index.html
@@ -179,20 +179,11 @@ TIAM activates RAC, which activates PAK.
               <div><b>NLP system to read with</b></div>
               <button id='parseReach' type="submit" class="btn btn-default parserSelect active">REACH</button>
               <button id='parseTrips' type="submit" class="btn btn-default parserSelect">TRIPS</button>
-              <br>
-              <div><b>Download output formats</b></div>
-              <button id='downloadINDRA' type="submit" class="btn btn-default">INDRA statments</button>
-              <button id='downloadPySB' type="submit" class="btn btn-default">PySB</button>
-              <button id='downloadSBML' type="submit" class="btn btn-default">SBML</button>
-              <button id='downloadSBGN' type="submit" class="btn btn-default">SBGN</button>
-              <button id='downloadBNGL' type="submit" class="btn btn-default">BNGL</button>
-              <button id='downloadKappa' type="submit" class="btn btn-default">Kappa</button>
-              <button id='downloadPNG' type="submit" class="btn btn-default">PNG</button>
           </div>
 
           <hr>
           <div class= 'btn-div'>
-              <button id='loadButtonDynamic' type="submit" class="btn btn-primary">Load</button>
+              <button id='loadButtonDynamic' type="submit" class="btn btn-primary">Build</button>
           </div>
     </div>
 
@@ -303,6 +294,18 @@ TIAM activates RAC, which activates PAK.
           <div id="cy-container" class="cy-container">
             <div id="cy_1" class="cy" data-url="static/cyjs/model_A101D_SKIN.json"></div>
         </div>
+    <!-- graph : end -->
+  </div>
+  <div class="row">
+    <div class="col-md-12">
+              <div><b>Download output formats</b></div>
+              <button id='downloadINDRA' type="submit" class="btn btn-default">INDRA JSON</button>
+              <button id='downloadPySB' type="submit" class="btn btn-default">PySB</button>
+              <button id='downloadSBML' type="submit" class="btn btn-default">SBML</button>
+              <button id='downloadSBGN' type="submit" class="btn btn-default">SBGN</button>
+              <button id='downloadBNGL' type="submit" class="btn btn-default">BNGL</button>
+              <button id='downloadKappa' type="submit" class="btn btn-default">Kappa</button>
+              <button id='downloadPNG' type="submit" class="btn btn-default">PNG</button>
     <!-- graph : end -->
   </div>
   </div>
