Further tweaking of layout

--- a/index.html
+++ b/index.html
@@ -296,9 +296,9 @@ TIAM activates RAC, which activates PAK.
         </div>
     <!-- graph : end -->
   </div>
-  <div class="row">
+  <div class="row" align="center">
     <div class="col-md-12">
-              <div><b>Download output formats</b></div>
+              <b>Download as</b>
               <button id='downloadINDRA' type="submit" class="btn btn-default">INDRA JSON</button>
               <button id='downloadPySB' type="submit" class="btn btn-default">PySB</button>
               <button id='downloadSBML' type="submit" class="btn btn-default">SBML</button>
