--- a/index.html
+++ b/index.html
@@ -305,6 +305,8 @@ TIAM activates RAC, which activates PAK.
               <button id='downloadSBGN' type="submit" class="btn btn-default">SBGN</button>
               <button id='downloadBNGL' type="submit" class="btn btn-default">BNGL</button>
               <button id='downloadKappa' type="submit" class="btn btn-default">Kappa</button>
+              <button id='downloadCX' type="submit" class="btn btn-default">CX</button>
+              <button id='NDEX' type="submit" class="btn btn-default">NDEX</button>
               <button id='downloadPNG' type="submit" class="btn btn-default">PNG</button>
     <!-- graph : end -->
   </div>
