--- a/index.html
+++ b/index.html
@@ -306,10 +306,24 @@ TIAM activates RAC, which activates PAK.
               <button id='downloadBNGL' type="submit" class="btn btn-default">BNGL</button>
               <button id='downloadKappa' type="submit" class="btn btn-default">Kappa</button>
               <button id='downloadCX' type="submit" class="btn btn-default">CX</button>
-              <button id='NDEX' type="submit" class="btn btn-default">NDEX</button>
+              <button id='NDEX' type="submit" class="btn btn-default" data-toggle="modal" data-target="#ndexModal">NDEX</button>
               <button id='downloadPNG' type="submit" class="btn btn-default">PNG</button>
     <!-- graph : end -->
   </div>
+  </div>
+  <div class="modal fade" id="ndexModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="exampleModalLabel">NDEX Upload</h4>
+        </div>
+        <div class="modal-body"></div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
   </div>
   </div>
     <!-- container-fluid : end -->
