--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     <script src="static/js/requests_APIs.js"></script>
     <script src="static/js/array_multifilter.js"></script>
     <script src="static/js/base_script.js"></script>
+    <script src="static/js/modalEdges.js"></script>
     <!-- js -->
 
 
@@ -324,7 +325,29 @@ TIAM activates RAC, which activates PAK.
         </div>
       </div>
     </div>
+  </div> 
+  <!-- modal end -->
+  <!-- modal start -->
+  <div class="modal fade" id="edgeModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="exampleModalLabel">Edge statements</h4>
+        </div>
+        <div class="modal-body">
+            <div class="edgeModal-sources btn-div"></div>
+            <div class="edgeModal-targets btn-div"></div>
+            <div class="edgeModal-stmtsbox"></div>
+            <buttontype="button" type="submit" class="btn btn-default get-evidence">Get evidence</button>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
   </div>
+  <!-- modal end -->
   </div>
     <!-- container-fluid : end -->
 </body>
