Minor changes to index.html and the McCormick text

--- a/index.html
+++ b/index.html
@@ -128,9 +128,7 @@
           <div class="form-group">
             <label for="textArea">Describe your mechanism.</label>
             <textarea class="form-control" id="textArea" rows="15">
-Growth-factor proteins activate EGFR, ERBB2 and FGFR.
-Growth-factor proteins activate PDGFR.
-Growth-factor proteins activate MET, ROS1 and ALK.
+Growth-factor proteins activate EGFR, ERBB2, FGFR, PDGFR, MET, ROS1, and ALK.
 EGFR, ERBB2, PDGFR, MET, ROS1, ALK and FGFR activate GRB2 and SHC.
 GRB2 and SHC activate RASGRF and SOS.
 GRB2 binds SHC.
@@ -312,6 +310,7 @@ TIAM activates RAC, which activates PAK.
     <!-- graph : end -->
   </div>
   </div>
+  <!-- modal start -->
   <div class="modal fade" id="ndexModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
