--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ TIAM activates RAC, which activates PAK.
   </div> 
   <!-- modal end -->
   <!-- modal start -->
-  <div class="modal fade" id="edgeModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+  <div class="modal" id="edgeModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
@@ -338,7 +338,6 @@ TIAM activates RAC, which activates PAK.
             <div class="edgeModal-sources btn-div"></div>
             <div class="edgeModal-targets btn-div"></div>
             <div class="edgeModal-stmtsbox"></div>
-            <buttontype="button" type="submit" class="btn btn-default get-evidence">Get evidence</button>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
