use renderjson library to render statements in panels
- source statements rendered in panels
- can be explored using renderjson, much in the same way as chrome dev tools lets
  one click through a JSON

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     <script src="static/bower_components/lodash/lodash.js"></script>
     <script src="static/bower_components/graphlib/dist/graphlib.core.js"></script>
     <script src="static/bower_components/dagre/dist/dagre.core.js"></script>
-    <script src="static/bower_components/dagre/dist/dagre.core.min.js"></script>
     <script src="static/bower_components/cytoscape-dagre/cytoscape-dagre.js"></script>
     <script src="static/bower_components/webcola/WebCola/cola.min.js"></script>
     <script src="static/bower_components/cytoscape-cola/cytoscape-cola.js"></script>
@@ -34,6 +33,7 @@
     <script src="static/bower_components/seiyria-bootstrap-slider/dist/bootstrap-slider.js"></script>
     <script src="static/bower_components/papaparse/papaparse.js"></script>
     <script src="static/bower_components/datatables.net/js/jquery.dataTables.js"></script>
+    <script src="static/bower_components/renderjson/index.js"></script>
     <!-- endbower -->
     <!-- d3 -->
     <script src="https://d3js.org/d3-array.v1.min.js"></script>
@@ -54,8 +54,8 @@
     <script src="static/js/highlightPath.js"></script>
     <script src="static/js/requests_APIs.js"></script>
     <script src="static/js/array_multifilter.js"></script>
-    <script src="static/js/base_script.js"></script>
     <script src="static/js/modalEdges.js"></script>
+    <script src="static/js/base_script.js"></script>
     <!-- js -->
 
 
