--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
       ga('send', 'pageview');
     </script>
     <!-- end google analytics -->
-
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
