--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="static/bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="static/bower_components/bootstrap-select/dist/css/bootstrap-select.css" />
     <link rel="stylesheet" href="static/bower_components/cytoscape-panzoom/cytoscape.js-panzoom.css" />
-    <link rel="stylesheet" href="static/bower_components/components-font-awesome/css/font-awesome.css" />
+    <link rel="stylesheet" href="static/bower_components/components-font-awesome/css/fontawesome-all.css" />
     <link rel="stylesheet" href="static/bower_components/seiyria-bootstrap-slider/dist/css/bootstrap-slider.css" />
     <link rel="stylesheet" href="static/bower_components/datatables.net-dt/css/jquery.dataTables.css" />
     <!-- endbower -->
@@ -331,7 +331,7 @@ TIAM activates RAC, which activates PAK.
   <!-- modal start -->
   <div class="modal" id="edgeModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
     <div class="modal-dialog" role="document">
-      <div class="modal-content">
+      <div class="modal-content modal-fullscreen">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
           <h4 class="modal-title" id="exampleModalLabel">Edge statements</h4>
