install FileSaver.js and add it to bower.json
- will save using this method rather than creating elements in doc
- permits greater file sizes for things like SBGN/SBML

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <script src="static/bower_components/papaparse/papaparse.js"></script>
     <script src="static/bower_components/datatables.net/js/jquery.dataTables.js"></script>
     <script src="static/bower_components/renderjson/index.js"></script>
+    <script src="static/bower_components/FileSaver.min/index.js"></script>
     <!-- endbower -->
     <!-- d3 -->
     <script src="https://d3js.org/d3-array.v1.min.js"></script>
