make top bar take up less vertical space, add getNdex button

--- a/index.html
+++ b/index.html
@@ -82,19 +82,18 @@
     <div class="container-fluid">
 
     <div class=row>
-        <div class="col-md-12">
-            <h1><img src="indra_logo_v2.png" alt="INDRA logo" style="height:30px;"></img> INDRA </h1>
-            <h5>Integrated Network and Dynamical Reasoning Assembler </h5>
+        <div class="col-sm-2 col-xs-2 padding-0">
+            <img src="indra_logo_v2.png" alt="INDRA logo" style="height:30px;"></img>
         </div>
-    </div>
-
-    <div class=row>
-      <div class='col-md-12'>
+        <div class="col-sm-4 col-xs-4 hidden-xs pull-left padding-0" style="font:30px bold;">INDRA-IPM</div>
+      <div class='col-sm-6 col-xs-6 pull-right'>
         <!-- Button trigger modal -->
-        <button type="button" class="btn btn-default btn-lg" data-toggle="modal" data-target="#menu">
+
+            <button type="button" class="btn btn-default btn-lg pull-right" data-toggle="modal" data-target="#menu">
             <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
             <b>MODEL OPTIONS</b>
-        </button>
+            </button>
+
 
 
 
@@ -309,6 +308,7 @@ TIAM activates RAC, which activates PAK.
               <button id='downloadKappa' type="submit" class="btn btn-default">Kappa</button>
               <button id='downloadCX' type="submit" class="btn btn-default">CX</button>
               <button id='NDEX' type="submit" class="btn btn-default" data-toggle="modal" data-target="#ndexModal">NDEX</button>
+              <button id='getNDEX' type="submit" class="btn btn-default">Get NDEX</button>
               <button id='downloadPNG' type="submit" class="btn btn-default">PNG</button>
     <!-- graph : end -->
   </div>
