--- a/index.html
+++ b/index.html
@@ -82,16 +82,16 @@
     <div class="container-fluid">
 
     <div class=row>
-        <div class="col-sm-2 col-xs-2 padding-0">
-            <img src="indra_logo_v2.png" alt="INDRA logo" style="height:30px;"></img>
+        <div class="col-sm-6 col-xs-6 padding-0">
+            <img src="indra_logo_v2.png" alt="INDRA logo" style="height:30px;"></img> <span class="hidden-xs" style="font:30px bold;">INDRA-IPM</span>
         </div>
-        <div class="col-sm-4 col-xs-4 hidden-xs pull-left padding-0" style="font:30px bold;">INDRA-IPM</div>
+        <!-- <div class="col-sm-4 col-xs-4 hidden-xs pull-left padding-0" style="font:30px bold;">INDRA-IPM</div> -->
       <div class='col-sm-6 col-xs-6 pull-right'>
         <!-- Button trigger modal -->
 
             <button type="button" class="btn btn-default btn-lg pull-right" data-toggle="modal" data-target="#menu">
             <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
-            <b>MODEL OPTIONS</b>
+            <b class="hidden-xs">MODEL OPTIONS</b>
             </button>
 
 
@@ -104,10 +104,10 @@
               <div class="modal-body">
                   <div class="tabbable">
                   <ul class="nav nav-tabs">
-                    <li class="active"><a data-toggle="tab" href="#ras227">Prebuilt models</a></li>
                     <li ><a data-toggle="tab" href="#byom">Build</a></li>
                     <li ><a data-toggle="tab" href="#context">Context</a></li>
                     <!-- <li ><a data-toggle="tab" href="#phospho">Phospho</a></li> -->
+                    <li class="active"><a data-toggle="tab" href="#ras227">Prebuilt models</a></li>
                     <li ><a data-toggle="tab" href="#about">About</a></li>
                   </ul>
 
@@ -299,7 +299,7 @@ TIAM activates RAC, which activates PAK.
   </div>
   <div class="row" align="center">
     <div class="col-md-12">
-              <b>Download as</b>
+              <b>Download</b>
               <button id='downloadINDRA' type="submit" class="btn btn-default">INDRA JSON</button>
               <button id='downloadPySB' type="submit" class="btn btn-default">PySB</button>
               <button id='downloadSBML' type="submit" class="btn btn-default">SBML</button>
