add NCI RAS Model back to prebuilt model dropdown

--- a/index.html
+++ b/index.html
@@ -116,7 +116,9 @@
                     <div>
                         <br>
                         <div>
-                            <select id='model_picker' class="selectpicker"></select>
+                            <select id='model_picker' class="selectpicker">
+                                <option>NCI RAS Pathway 1.0</option>
+                            </select>
                         </div>
                     </div>
                     <br>
