--- a/index.html
+++ b/index.html
@@ -312,9 +312,9 @@ TIAM activates RAC, which activates PAK.
               <button id='downloadBNGL' type="submit" class="btn btn-default">BNGL</button>
               <button id='downloadKappa' type="submit" class="btn btn-default">Kappa</button>
               <button id='downloadCX' type="submit" class="btn btn-default">CX</button>
-              <button id='NDEX' type="submit" class="btn btn-default" data-toggle="modal" data-target="#ndexModal">NDEX</button>
-              <button id='getNDEX' type="submit" class="btn btn-default">Get NDEX</button>
               <button id='downloadPNG' type="submit" class="btn btn-default">PNG</button>
+              <span>|</span>
+              <button id='NDEX' type="submit" class="btn btn-default" data-toggle="modal" data-target="#ndexModal">NDEX</button>
     <!-- graph : end -->
   </div>
   </div>
@@ -323,10 +323,28 @@ TIAM activates RAC, which activates PAK.
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title" id="exampleModalLabel">NDEX Upload</h4>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="false">&times;</span></button>
+          <h4 class="modal-title" id="exampleModalLabel">NDEX</h4>
         </div>
-        <div class="modal-body"></div>
+        <div class="modal-body">
+                <div>
+                    <h4>NDEX Download</h4>
+                    <div class="form-group">
+                        <label for="ndexUUID"></label>
+                        <input type="email" class="form-control" id="ndexUUID" placeholder="e.g. - ea778a86-91b9-11e8-a4bf-0ac135e8bacf">
+                    </div>
+                    <div class= 'btn-div'>
+                        <button id='loadNDEX' type="submit" class="btn btn-primary">Load</button>
+                    </div>
+                </div>
+                <hr>
+                <div>
+                    <h4>NDEX Upload</h4>
+                    <div class="ndex-upload-container"></div>
+                    <button id='NDEX_upload_btn' type="submit" class="btn btn-primary">Upload</button>
+
+                </div>   
+        </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
         </div>
