add funding info to about

--- a/index.html
+++ b/index.html
@@ -279,6 +279,10 @@ TIAM activates RAC, which activates PAK.
                               <li>Interactive network visualizations are implemented in <a href="http://js.cytoscape.org">cytoscape.js</a></li>
                               <li><a href="http://www.colorbrewer2.org">Colorbrewer2</a> was used to select colorscales for models.</li>
                           </ul>
+                          <h4>Funding</h4>
+                          <div>
+                            This work was funded by ARO Grants W911NF‐14‐1‐0397 and W911NF‐15‐1‐0544 under the DARPA Big Mechanism and Communicating with Comput-ers programs, and by NIGMS Grant P50GM107618 to Peter K. Sorger.
+                          </div>
                       </div>
                   </div>
                 </div>
