add sources, targets labels for filtering edge members

--- a/index.html
+++ b/index.html
@@ -365,7 +365,9 @@ TIAM activates RAC, which activates PAK.
           <h4 class="modal-title" id="exampleModalLabel">Edge statements</h4>
         </div>
         <div class="modal-body">
+            <h4>Sources</h4>
             <div class="edgeModal-sources btn-div"></div>
+            <h4>Targets</h4>
             <div class="edgeModal-targets btn-div"></div>
             <div class="edgeModal-stmtsbox"></div>
         </div>
