--- a/index.html
+++ b/index.html
@@ -275,14 +275,19 @@ TIAM activates RAC, which activates PAK.
                           <h4>How does this work?</h4>
                           <ul>
                               <li>All models are generated using <a href="https://github.com/sorgerlab/indra">INDRA</a> developed by the <a href="http://hits.harvard.edu/the-program/laboratory-of-systems-pharmacology/about/">Laboratory of Systems Pharmacology</a> at Harvard Medical School.</li>
+                              <li>The underlying API is available at <a href="api.indra.bio:8000">api.indra.bio:8000</a> and documented at: <a href="http://pathwaymap.indra.bio/api">http://pathwaymap.indra.bio/api</a></li>
                               <li>Natural language processing is done using the <a href="https://github.com/clulab/reach">REACH</a> natural language processor developed by the CLU Lab at the University of Arizona or the <a href="https://www.ihmc.us/trips/">TRIPS</a> processor developed by IHMC.</li>
                               <li>Interactive network visualizations are implemented in <a href="http://js.cytoscape.org">cytoscape.js</a></li>
                               <li><a href="http://www.colorbrewer2.org">Colorbrewer2</a> was used to select colorscales for models.</li>
                           </ul>
                           <h4>Funding</h4>
-                          <div>
-                            This work was funded by ARO Grants W911NF‐14‐1‐0397 and W911NF‐15‐1‐0544 under the DARPA Big Mechanism and Communicating with Comput-ers programs, and by NIGMS Grant P50GM107618 to Peter K. Sorger.
-                          </div>
+                            <ul>
+                            <li>This work was funded by ARO Grants W911NF‐14‐1‐0397 and W911NF‐15‐1‐0544 under the DARPA Big Mechanism and Communicating with Computers programs, and by NIGMS Grant P50GM107618 to Peter K. Sorger.</li>
+                            </ul>
+                            <h4>Privacy</h4>
+                            <ul>
+                            <li>Our API backend receives requests such as those for reading, contextualization,and sharing via NDEX. Our server logs the IP addresses which make requets to the API. The data from some user requests is forwarded to external APIs such as TRIPS (reading) and cBioPortal (contextualization) in order to generate responses. Some of the plugins we use such as d3.js require cookies.</li>
+                            </ul>
                       </div>
                   </div>
                 </div>
