hide unnecessary download buttons on small screens
- users on devices with small screens are unlikely to benefit from json, pysb, bngl, etc downloads
- hide the buttons to reduce clutter

--- a/index.html
+++ b/index.html
@@ -314,13 +314,13 @@ TIAM activates RAC, which activates PAK.
   <div class="row" align="center">
     <div class="col-md-12">
               <b>Download</b>
-              <button id='downloadINDRA' type="submit" class="btn btn-default">INDRA JSON</button>
-              <button id='downloadPySB' type="submit" class="btn btn-default">PySB</button>
-              <button id='downloadSBML' type="submit" class="btn btn-default">SBML</button>
-              <button id='downloadSBGN' type="submit" class="btn btn-default">SBGN</button>
-              <button id='downloadBNGL' type="submit" class="btn btn-default">BNGL</button>
-              <button id='downloadKappa' type="submit" class="btn btn-default">Kappa</button>
-              <button id='downloadCX' type="submit" class="btn btn-default">CX</button>
+              <button id='downloadINDRA' type="submit" class="btn btn-default hidden-xs">INDRA JSON</button>
+              <button id='downloadPySB' type="submit" class="btn btn-default hidden-xs">PySB</button>
+              <button id='downloadSBML' type="submit" class="btn btn-default hidden-xs">SBML</button>
+              <button id='downloadSBGN' type="submit" class="btn btn-default hidden-xs">SBGN</button>
+              <button id='downloadBNGL' type="submit" class="btn btn-default hidden-xs">BNGL</button>
+              <button id='downloadKappa' type="submit" class="btn btn-default hidden-xs">Kappa</button>
+              <button id='downloadCX' type="submit" class="btn btn-default hidden-xs">CX</button>
               <button id='downloadPNG' type="submit" class="btn btn-default">PNG</button>
               <span>|</span>
               <button id='NDEX' type="submit" class="btn btn-default" data-toggle="modal" data-target="#ndexModal">NDEX</button>
