small changes to about text, fix in drawCytoscape

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ TIAM activates RAC, which activates PAK.
                           <br>
                           <h4>Model context</h4>
                           <ul>
-                              <li>Network models can be contextualized using Context tab.</li>
+                              <li>Network models can be contextualized using the Context tab.</li>
                               <li>Users can load gene expression and mutation data from each of the 900+ cell lines available in the <a href="https://portals.broadinstitute.org/ccle">CCLE</a>.</li>
                               <li>We access a publicly available version of the CCLE hosted on <a href="http://www.cbioportal.org/">cBio Portal</a>.</li>
                           </ul>
@@ -286,7 +286,7 @@ TIAM activates RAC, which activates PAK.
                             </ul>
                             <h4>Privacy</h4>
                             <ul>
-                            <li>Our API backend receives requests such as those for reading, contextualization,and sharing via NDEX. Our server logs the IP addresses which make requets to the API. The data from some user requests is forwarded to external APIs such as TRIPS (reading) and cBioPortal (contextualization) in order to generate responses. Some of the plugins we use such as d3.js require cookies.</li>
+                            <li>Our API backend receives requests such as those for reading, contextualization, and NDEX sharing. Our server logs the IP addresses which make reqeusts to the API. The data from some user requests is forwarded to external APIs such as TRIPS (reading) and cBioPortal (contextualization) in order to generate responses. Some of the plugins we use such as d3.js require cookies.</li>
                             </ul>
                       </div>
                   </div>
