--- a/index.html
+++ b/index.html
@@ -252,7 +252,8 @@ TIAM activates RAC, which activates PAK.
                               <li>Wild-type genes are colored <font color="green">green.</font></li>
                               <li>Mutated genes are colored <font color="orange">orange.</font></li>
                               <li>The intensity of each color corresponds to the expression level of a gene in CCLE.</li>
-                              <li>Clicking a node provides additional context via CiteAb, HGNC, and UniProt.</li>
+                              <li>Clicking any node provides additional context by linking out to CiteAb, HGNC, and UniProt.</li>
+                              <li>Clicking any edge will allow a user to filter the sources and targets of that edge and make a request for evidence found in literature and curated database that is stored in INDRA DB.</li>
                               <li><a href="https://www.cancer.gov/research/key-initiatives/ras/ras-central/blog/2014/what-do-we-mean-ras-pathway">The RAS Pathway Map</a> model was drawn by Dr. Frank McCormick at the NCI RAS Initiative.</li>
                           </ul>
                           <br>
@@ -278,8 +279,9 @@ TIAM activates RAC, which activates PAK.
                               <li>The underlying API is available at <a href="api.indra.bio:8000">api.indra.bio:8000</a> and documented at: <a href="http://pathwaymap.indra.bio/api">http://pathwaymap.indra.bio/api</a></li>
                               <li>Natural language processing is done using the <a href="https://github.com/clulab/reach">REACH</a> natural language processor developed by the CLU Lab at the University of Arizona or the <a href="https://www.ihmc.us/trips/">TRIPS</a> processor developed by IHMC.</li>
                               <li>Interactive network visualizations are implemented in <a href="http://js.cytoscape.org">cytoscape.js</a></li>
-                              <li><a href="http://www.colorbrewer2.org">Colorbrewer2</a> was used to select colorscales for models.</li>
+                              <li><a href="http://www.colorbrewer2.org">Colorbrewer2</a> was used to select colorscales for models rendered with D3.js</li>
                           </ul>
+                          <br>
                           <h4>Funding</h4>
                             <ul>
                             <li>This work was funded by ARO Grants W911NF‐14‐1‐0397 and W911NF‐15‐1‐0544 under the DARPA Big Mechanism and Communicating with Computers programs, and by NIGMS Grant P50GM107618 to Peter K. Sorger.</li>
@@ -374,6 +376,7 @@ TIAM activates RAC, which activates PAK.
             <div class="edgeModal-sources btn-div"></div>
             <h4>Targets</h4>
             <div class="edgeModal-targets btn-div"></div>
+            <br>
             <div class="edgeModal-stmtsbox"></div>
         </div>
         <div class="modal-footer">
