edit prebuilt model dropdown
- value must contain the folder name of the model
- the html text is what the user sees
- this matches selectpicker library (in use) style

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         <br>
                         <div>
                             <select id='model_picker' class="selectpicker">
-                                <option>NCI RAS Pathway 1.0</option>
+                                <option value="McCormick">NCI RAS Pathway 1.0</option>
                             </select>
                         </div>
                     </div>
