--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 
     <!-- google analytics -->
-    <script>
+    <!-- <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -70,7 +70,7 @@
 
       ga('create', 'UA-96082280-1', 'auto');
       ga('send', 'pageview');
-    </script>
+    </script> -->
     <!-- end google analytics -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
