--- a/index.html
+++ b/index.html
@@ -56,19 +56,6 @@
     <script src="static/js/base_script.js"></script>
     <!-- js -->
 
-
-
-    <!-- google analytics -->
-    <!-- <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-96082280-1', 'auto');
-      ga('send', 'pageview');
-    </script> -->
-    <!-- end google analytics -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -285,7 +272,7 @@ TIAM activates RAC, which activates PAK.
                             </ul>
                             <h4>Privacy</h4>
                             <ul>
-                            <li>Our API backend receives requests such as those for reading, contextualization, and NDEX sharing. Our server logs the IP addresses which make reqeusts to the API. The data from some user requests is forwarded to external APIs such as TRIPS (reading) and cBioPortal (contextualization) in order to generate responses. Some of the plugins we use such as d3.js require cookies.</li>
+                            <li>Our API backend receives requests such as those for reading, contextualization, and NDEX sharing. Our server logs the IP addresses which make reqeusts to the API. The data from some user requests is forwarded to external APIs such as TRIPS (reading) and cBioPortal (contextualization) in order to generate responses.</li>
                             </ul>
                       </div>
                   </div>
