--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="static/bower_components/cytoscape-panzoom/cytoscape.js-panzoom.css" />
     <link rel="stylesheet" href="static/bower_components/components-font-awesome/css/fontawesome-all.css" />
     <link rel="stylesheet" href="static/bower_components/seiyria-bootstrap-slider/dist/css/bootstrap-slider.css" />
+    <link rel="stylesheet" href="static/bower_components/bootstrap-toggle/css/bootstrap-toggle.min.css" />
     <!-- endbower -->
     <!-- bower:js -->
     <script src="static/bower_components/jquery/dist/jquery.js"></script>
@@ -32,6 +33,7 @@
     <script src="static/bower_components/seiyria-bootstrap-slider/dist/bootstrap-slider.js"></script>
     <script src="static/bower_components/renderjson/index.js"></script>
     <script src="static/bower_components/FileSaver.min/index.js"></script>
+    <script src="static/bower_components/bootstrap-toggle/js/bootstrap-toggle.min.js"></script>
     <!-- endbower -->
     <!-- d3 -->
     <script src="https://d3js.org/d3-array.v1.min.js"></script>
@@ -310,6 +312,8 @@ TIAM activates RAC, which activates PAK.
               <button id='downloadPNG' type="submit" class="btn btn-default">PNG</button>
               <span>|</span>
               <button id='NDEX' type="submit" class="btn btn-default" data-toggle="modal" data-target="#ndexModal">NDEX</button>
+              <span>|</span>
+              <input id="layoutToggle" type="checkbox" checked data-toggle="toggle" data-onstyle="primary" data-on="Layout" data-off="Off">
     <!-- graph : end -->
   </div>
   </div>
