use notifyjs library to display Requester messages
- notifications of status

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <script src="static/bower_components/renderjson/index.js"></script>
     <script src="static/bower_components/FileSaver.min/index.js"></script>
     <script src="static/bower_components/bootstrap-toggle/js/bootstrap-toggle.min.js"></script>
+    <script src="static/bower_components/notifyjs/dist/notify.js"></script>
     <!-- endbower -->
     <!-- d3 -->
     <script src="https://d3js.org/d3-array.v1.min.js"></script>
