change api address in docs

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ TIAM activates RAC, which activates PAK.
                           <ul>
                               <li>Network models can be contextualized using the Context tab.</li>
                               <li>Users can load gene expression and mutation data from each of the 900+ cell lines available in the <a href="https://portals.broadinstitute.org/ccle">CCLE</a>.</li>
-                              <li>We access a publicly available version of the CCLE hosted on <a href="http://www.cbioportal.org/">cBio Portal</a>.</li>
+                              <li>We access a publicly available version of the CCLE hosted on <a href="http://www.indra.bio/rest_api/docs/">cBio Portal</a>.</li>
                           </ul>
                           <br>
                           <h4>How does this work?</h4>
