disable autocomplete for forms/inputs
- firefox likes to retain last input
- this leads to incorrect behavior for toggle

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       <form>
           <div class="form-group">
             <label for="textArea">Describe your mechanism.</label>
-            <textarea class="form-control" id="textArea" rows="15">
+            <textarea class="form-control" id="textArea" rows="15" autocomplete="off">
 Growth-factor proteins activate EGFR, ERBB2, FGFR, PDGFR, MET, ROS1, and ALK.
 EGFR, ERBB2, PDGFR, MET, ROS1, ALK and FGFR activate GRB2 and SHC.
 GRB2 and SHC activate RASGRF and SOS.
@@ -314,7 +314,7 @@ TIAM activates RAC, which activates PAK.
               <span>|</span>
               <button id='NDEX' type="submit" class="btn btn-default" data-toggle="modal" data-target="#ndexModal">NDEX</button>
               <span>|</span>
-              <input id="layoutToggle" type="checkbox" checked data-toggle="toggle" data-onstyle="primary" data-on="Layout" data-off="Off">
+              <input id="layoutToggle" type="checkbox" checked data-toggle="toggle" data-onstyle="primary" data-on="Layout" data-off="Off" autocomplete="off">
     <!-- graph : end -->
   </div>
   </div>
@@ -331,7 +331,7 @@ TIAM activates RAC, which activates PAK.
                     <h4>NDEX Download</h4>
                     <div class="form-group">
                         <label for="ndexUUID"></label>
-                        <input type="email" class="form-control" id="ndexUUID" placeholder="e.g. - ea778a86-91b9-11e8-a4bf-0ac135e8bacf">
+                        <input type="email" class="form-control" id="ndexUUID" placeholder="e.g. - ea778a86-91b9-11e8-a4bf-0ac135e8bacf" autocomplete="off">
                     </div>
                     <div class= 'btn-div'>
                         <button id='loadNDEX' type="submit" class="btn btn-primary">Load</button>
