--- a/index.html
+++ b/index.html
@@ -231,53 +231,122 @@ TIAM activates RAC, which activates PAK.
                   </div> -->
 
                   <div id="about" class="tab-pane fade in">
-                      <div >
-                          <h4>How do I read this map?</h4>
-                          <ul>
-                              <li>Nodes represent genes.</li>
-                              <li>Nodes that are subdivided into pie charts represent families.</li>
-                              <li>Wild-type genes are colored <font color="green">green.</font></li>
-                              <li>Mutated genes are colored <font color="orange">orange.</font></li>
-                              <li>The intensity of each color corresponds to the expression level of a gene in CCLE.</li>
-                              <li>Clicking any node provides additional context by linking out to CiteAb, HGNC, and UniProt.</li>
-                              <li>Clicking any edge will allow a user to filter the sources and targets of that edge and make a request for evidence found in literature and curated database that is stored in INDRA DB.</li>
-                              <li><a href="https://www.cancer.gov/research/key-initiatives/ras/ras-central/blog/2014/what-do-we-mean-ras-pathway">The RAS Pathway Map</a> model was drawn by Dr. Frank McCormick at the NCI RAS Initiative.</li>
-                          </ul>
-                          <br>
-                          <h4>Build your own model from text</h4>
-                          <ul>
-                              <li>Open the Build tab.</li>
-                              <li>Enter a list of sentences describing biological mechanisms.</li>
-                              <li>Click load and exit the menu.</li>
-                              <li>Your model should be ready momentarily.</li>
-                              <li>The text example in Build is a description of Frank McCormick's Ras Pathway diagram.</li>
-                          </ul>
-                          <br>
-                          <h4>Model context</h4>
-                          <ul>
-                              <li>Network models can be contextualized using the Context tab.</li>
-                              <li>Users can load gene expression and mutation data from each of the 900+ cell lines available in the <a href="https://portals.broadinstitute.org/ccle">CCLE</a>.</li>
-                              <li>We access a publicly available version of the CCLE hosted on <a href="http://www.indra.bio/rest_api/docs/">cBio Portal</a>.</li>
-                          </ul>
-                          <br>
-                          <h4>How does this work?</h4>
-                          <ul>
-                              <li>All models are generated using <a href="https://github.com/sorgerlab/indra">INDRA</a> developed by the <a href="http://hits.harvard.edu/the-program/laboratory-of-systems-pharmacology/about/">Laboratory of Systems Pharmacology</a> at Harvard Medical School.</li>
-                              <li>The underlying API is available at <a href="api.indra.bio:8000">api.indra.bio:8000</a> and documented at: <a href="http://pathwaymap.indra.bio/api">http://pathwaymap.indra.bio/api</a></li>
-                              <li>Natural language processing is done using the <a href="https://github.com/clulab/reach">REACH</a> natural language processor developed by the CLU Lab at the University of Arizona or the <a href="https://www.ihmc.us/trips/">TRIPS</a> processor developed by IHMC.</li>
-                              <li>Interactive network visualizations are implemented in <a href="http://js.cytoscape.org">cytoscape.js</a></li>
-                              <li><a href="http://www.colorbrewer2.org">Colorbrewer2</a> was used to select colorscales for models rendered with D3.js</li>
-                          </ul>
-                          <br>
-                          <h4>Funding</h4>
-                            <ul>
-                            <li>This work was funded by ARO Grants W911NF‐14‐1‐0397 and W911NF‐15‐1‐0544 under the DARPA Big Mechanism and Communicating with Computers programs, and by NIGMS Grant P50GM107618 to Peter K. Sorger.</li>
-                            </ul>
-                            <h4>Privacy</h4>
-                            <ul>
-                            <li>Our API backend receives requests such as those for reading, contextualization, and NDEX sharing. Our server logs the IP addresses which make reqeusts to the API. The data from some user requests is forwarded to external APIs such as TRIPS (reading) and cBioPortal (contextualization) in order to generate responses.</li>
-                            </ul>
-                      </div>
+                    <br>
+                    <div class="panel-group">
+                        <!-- panel 1 start -->
+                        <div class="panel panel-default">
+                          <div class="panel-heading">
+                            <h4 class="panel-title">
+                              <a data-toggle="collapse" href="#collapse1">How do I read this map?</a>
+                            </h4>
+                          </div>
+                          <div id="collapse1" class="panel-collapse collapse">
+                            <div class="panel-body">
+                                <li>Nodes represent genes.</li>
+                                <li>Nodes that are subdivided into pie charts represent families.</li>
+                                <li>Wild-type genes are colored <font color="green">green.</font></li>
+                                <li>Mutated genes are colored <font color="orange">orange.</font></li>
+                                <li>The intensity of each color corresponds to the expression level of a gene in CCLE.</li>
+                                <li>Clicking any node provides additional context by linking out to CiteAb, HGNC, and UniProt.</li>
+                                <li>Clicking any edge will allow a user to filter the sources and targets of that edge and make a request for evidence found in literature and curated database that is stored in INDRA DB.</li>
+                                <li><a href="https://www.cancer.gov/research/key-initiatives/ras/ras-central/blog/2014/what-do-we-mean-ras-pathway">The RAS Pathway Map</a> model was drawn by Dr. Frank McCormick at the NCI RAS Initiative.</li>
+                            </div>
+                          </div>
+                        </div>
+                        <!-- panel 1 end -->
+                        <!-- panel 2 start -->
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h4 class="panel-title">
+                                <a data-toggle="collapse" href="#collapse2">Build your own model from text</a>
+                                </h4>
+                            </div>
+                            <div id="collapse2" class="panel-collapse collapse">
+                                <div class="panel-body">
+                                <ul>
+                                    <li>Open the Build tab.</li>
+                                    <li>Enter a list of sentences describing biological mechanisms.</li>
+                                    <li>Click load and exit the menu.</li>
+                                    <li>Your model should be ready momentarily.</li>
+                                    <li>The text example in Build is a description of Frank McCormick's Ras Pathway diagram.</li>
+                                </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- panel 2 end -->
+                        <!-- panel 3 start -->
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h4 class="panel-title">
+                                <a data-toggle="collapse" href="#collapse3">Model context</a>
+                                </h4>
+                            </div>
+                            <div id="collapse3" class="panel-collapse collapse">
+                                <div class="panel-body">
+                                <ul>
+                                    <li>Network models can be contextualized using the Context tab.</li>
+                                    <li>Users can load gene expression and mutation data from each of the 900+ cell lines available in the <a href="https://portals.broadinstitute.org/ccle">CCLE</a>.</li>
+                                    <li>We access a publicly available version of the CCLE hosted on <a href="http://www.cbioportal.org/study?id=cellline_ccle_broad">cBio Portal</a>.</li>
+                                </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- panel 3 end --> 
+                        <!-- panel 4 start -->
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h4 class="panel-title">
+                                <a data-toggle="collapse" href="#collapse4">How does this work?</a>
+                                </h4>
+                            </div>
+                            <div id="collapse4" class="panel-collapse collapse">
+                                <div class="panel-body">
+                                <ul>
+                                    <li>All models are generated using <a href="https://github.com/sorgerlab/indra">INDRA</a> developed by the <a href="http://hits.harvard.edu/the-program/laboratory-of-systems-pharmacology/about/">Laboratory of Systems Pharmacology</a> at Harvard Medical School.</li>
+                                    <li>The underlying API is available at <a href="api.indra.bio:8000">api.indra.bio:8000</a> and documented at: <a href="http://pathwaymap.indra.bio/api">http://pathwaymap.indra.bio/api</a></li>
+                                    <li>Natural language processing is done using the <a href="https://github.com/clulab/reach">REACH</a> natural language processor developed by the CLU Lab at the University of Arizona or the <a href="https://www.ihmc.us/trips/">TRIPS</a> processor developed by IHMC.</li>
+                                    <li>Interactive network visualizations are implemented in <a href="http://js.cytoscape.org">cytoscape.js</a></li>
+                                    <li><a href="http://www.colorbrewer2.org">Colorbrewer2</a> was used to select colorscales for models rendered with D3.js</li>
+                                </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- panel 4 end -->
+                        <!-- panel 5 start -->
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h4 class="panel-title">
+                                <a data-toggle="collapse" href="#collapse5">Funding</a>
+                                </h4>
+                            </div>
+                            <div id="collapse5" class="panel-collapse collapse">
+                                <div class="panel-body">
+                                <ul>
+                                    <li>This work was funded by ARO Grants W911NF‐14‐1‐0397 and W911NF‐15‐1‐0544 under the DARPA Big Mechanism and Communicating with Computers programs, and by NIGMS Grant P50GM107618 to Peter K. Sorger.</li>
+                                </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- panel 5 end -->
+                        <!-- panel 6 start -->
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h4 class="panel-title">
+                                <a data-toggle="collapse" href="#collapse6">Privacy</a>
+                                </h4>
+                            </div>
+                            <div id="collapse6" class="panel-collapse collapse">
+                                <div class="panel-body">
+                                <ul>
+                                        <li>Our API backend receives requests such as those for reading, contextualization, and NDEX sharing. </li>
+                                        <li>Our server logs the IP addresses which make reqeusts to the API.</li>
+                                        <li>The data from some user requests is forwarded to external APIs such as TRIPS (reading) and cBioPortal (contextualization) in order to generate responses.</li> 
+                                </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- panel 6 end -->   
+                      </div>  
                   </div>
                 </div>
 
