more explicit legend label
add "expression level"

--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@ TIAM activates RAC, which activates PAK.
 </div>
   <div class='row'>
       <div class="col-md-6 col-sm-6 text-center">
-        <span>wildtype - low</span>
+        <span><b>wildtype expression level</b> - low</span>
         <svg height='13px' width='100px'>
           <defs>
             <symbol id="s-rect">
@@ -465,7 +465,7 @@ TIAM activates RAC, which activates PAK.
         </svg><span>high</span>
       </div>
       <div class="col-md-6 col-md-6 text-center">
-        <span>mutated -  low</span>
+        <span><b>mutated expression level</b> -  low</span>
         <svg height='13px' width='100px'>
           <defs>
             <symbol id="s-rect">
